--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,15 +26,6 @@
   font-size: 32px;
   padding-left: 30px;
 }
-.nav__contact {
-  display: flex;
-  gap: 20px;
-  margin-left: auto;
-  padding-right: 30px;
-  align-items: center;
-  font-size: 20px;
-  font-weight: 500;
-}
 .nav__contact a:link {
   color: var(--pinkColor);
   text-decoration: none;
@@ -70,13 +61,10 @@
 }
 .nav__menu {
   display: flex;
+  gap: 20px;
   justify-content: space-between;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
-.nav__menu-element a:link {
+.nav__menu a:link {
   color: var(--pinkColor);
   text-decoration: none;
 }
